--- a/trunk/Habanero.Bo/Loaders/Dtds.resx
+++ b/trunk/Habanero.Bo/Loaders/Dtds.resx
@@ -118,14 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="_class" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>DTDs\class.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="BusinessObjectLookupListSource" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\BusinessObjectLookupListSource.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="ClassDef" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>DTDs\ClassDef.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="ClassDefs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>DTDs\ClassDefs.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="classes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>DTDs\classes.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="DatabaseLookupListSource" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\DatabaseLookupListSource.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
