--- a/trunk/Habanero.Bo/Loaders/Dtds.resx
+++ b/trunk/Habanero.Bo/Loaders/Dtds.resx
@@ -133,8 +133,8 @@
   <data name="GridPropertyCollection" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\GridPropertyCollection.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="KeyDef" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>DTDs\KeyDef.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>DTDs\key.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="PrimaryKeyDef" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\PrimaryKeyDef.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
