Completed the change from PrimaryKeyDef to primaryKey.  Note:  IsObjectID is actually important for the building of sql update strings.  If you are using composite keys that are actually real-world keys (like Hulett does) then those key fields need to be part of your update sql as you can change the values of the fields.  If the primary key is an id-type field (which could be an int, guid, string like account number or whatever else that isn't real world data that could change) then isObjectID should be true.

--- a/trunk/Habanero.Bo/Loaders/Dtds.resx
+++ b/trunk/Habanero.Bo/Loaders/Dtds.resx
@@ -136,8 +136,8 @@
   <data name="key" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\key.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="PrimaryKeyDef" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>DTDs\PrimaryKeyDef.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="primaryKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>DTDs\primaryKey.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Prop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\Prop.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
