--- a/trunk/Habanero.Test/TestResources.resx
+++ b/trunk/Habanero.Test/TestResources.resx
@@ -121,4 +121,7 @@
   <data name="TestJpeg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>TestResources\TestJpeg.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TestPhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>TestResources\TestPhoto.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
