--- a/trunk/Habanero.Test/TestResources.resx
+++ b/trunk/Habanero.Test/TestResources.resx
@@ -121,7 +121,16 @@
   <data name="TestJpeg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>TestResources\TestJpeg.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TestJpeg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>TestResources\TestJpeg2.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TestJpeg3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>TestResources\TestJpeg3.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TestPhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>TestResources\TestPhoto.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TestText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>TestResources\TestText.txt;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
