--- a/source/Habanero.Bo/Loaders/Dtds.resx
+++ b/source/Habanero.Bo/Loaders/Dtds.resx
@@ -184,4 +184,7 @@
   <data name="ui" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>DTDs\ui.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="filter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>dtds\filter.dtd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
