Fixed the Pin Button image

--- a/source/Habanero.UI.Base/CollapsiblePanelResource.resx
+++ b/source/Habanero.UI.Base/CollapsiblePanelResource.resx
@@ -117,14 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="headergradient" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\headergradient.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="headergradient" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAEAAAAjCAIAAADaE/fjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAGtJREFUGFdjkCyb
+        ylBz/RmD14oTDJ7LjzF4LD3C4LbkMIProoMMzgsPMDjO389gP28Pg93s3Qw2M3cwWM3YzmAxbSuD+ZTN
+        JGHTiRsZjCduYDDsX89g0LeWQa93NYNu9yoGna6VDNpADHQHABV7NTO1Ss0oAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="pinoff_withcolour" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\pinoff_withcolour.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pinoff_withcolour" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB0AAAAbCAMAAAC3FHQgAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAwBQTFRFBT1dBT5e
+        B0BgB0FhB0JiCEJiCURkCUVlCkZmC0dnC0hoDElpDEpqDUtrDUxsDk1tD05uD09vEFBwEVJxEVNyElR0
+        E1V1E1Z1E1Z2FFd3FFh4FVp6Flt7Flx7F1x8F119GF59GWGAGmKCG2ODG2SEHGWFHGaFHGaGHWeHHmiI
+        H2qJIGyLIG2MIW2NIW6NIW6OI3KRI3KSJHOSJHSTJXSUJXWVJXaVJneWJneXJ3iYKHqZKHqaKXubKn2d
+        Kn6dKn6eK3+fK4CfLYOiLYSjLoSkL4emMIinMImoMYqpMoyrM42sM46tNI6tNI+uNJCvNZGwNpKxNpOy
+        N5SzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAuzzTTwAAAPRJREFUOE/Vkm1T
+        glAQhW+pcDG5EEpqGr6QL5VJRlHai6JoCqHL/v8fk+OMmnGn7+7XZ3bnnLOH4H9DjogG3clG7V/NQSm7
+        wBmTEy6Hginq2viS4ROF+C6I9pJQVa6j6MQoeKfTSHLwU57Xir+oP37tmCWdCSFoXVzkPpzMjjauLpTz
+        8vWd3aQAhTYui4ORsKMSIeREKd8+30gA+RaG+Td3T4cD5+G+VS0oqfVl1cK5NuynD1RB6Aehl/BA7HgW
+        Cxp63NFKsr6ISjM2nj1y/DapZkyYgW5qxUnyu2L42E+awgsvZ4zWO9F7rsf9wmGRjqlXW+U/GYrehLjO
+        9jkAAAAASUVORK5CYII=
+</value>
   </data>
-  <data name="pinon_withcolour" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\pinon_withcolour.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pinon_withcolour" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB0AAAAbCAMAAAC3FHQgAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAwBQTFRFBT1dBj5e
+        Bj9fB0FhCEJiCENjCURkCkVlCkZmC0dnC0hoDEhoDElpDUtrDkxsD01tD05uD09vEE9vEFBwElJyElNz
+        E1R0FFZ2FFd3FVh4Flp6F1t7GFx8GF19GV5+GV9/GmCAGmGBG2KCHGKCHGODHGSEHWWFHmaGHmeHH2iI
+        IGmJIGuLIWyMIm6OI2+PJHCQJHGRJXKSJXOTJnSUJnWVJ3aWKHaWKHeXKHiYKXmZKnubLH2dLX+fLYCg
+        LoGhL4KiL4OjMYWlMYamMYenMoioM4mpM4qqNIurNYysNY2tNo6uNo+vN5GxOJGxOZKyOZOzOpS0OpW1
+        O5a2O5e3PJi4PJm5PZq6Ppu7AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAk9GQvgAAASNJREFUOE+V0n1b
+        gjAQAHAjVEorezFWIpGBSUAqWhSWQSpoaASG9/2/SWZpsPn0PO7P/Xa37e5S8N9Kbaa+GzuPxUaPhVbD
+        WjmmQUHr0YqwZEzHzED1ZO70l5MajXdzQrNrI3a28Lh+GMbrUauPZMs9FBcc1yZzmyl64FfEwXPGwVXJ
+        P1UYfQh+WQxLV5jOulsO1NnrN7CZcESHWGZgSwDtE8UzCg/DtIerRV0CGDlF2kaN/DCpUV9Ae9V5dFqq
+        3slqkNR3mTc1Crk+rUPgYj+amnJdP0bFM5Ztk5W0OcSXay5cqFyH0Elt50DQp/P9SS8i9D6bOje9n/IS
+        HezsU/wLZn911rLSiByiZRc+b5zVbWRm+H4PsTacybVvXpc3ORvkiS9nhusHpaGW8AAAAABJRU5ErkJg
+        gg==
+</value>
   </data>
 </root>
