Implemented IBusinessObjectRule that can be added to the BusinessObject.BusinessObjectRules and is validated with Status.IsValid and Status.HasWarnings Removed or fixed many todo's Removed Classes such as PropRuleObject that are not being used.

--- a/source/Habanero.Bo/Loaders/Dtds.resx
+++ b/source/Habanero.Bo/Loaders/Dtds.resx
@@ -40,7 +40,7 @@
     ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
     
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    Note_ - application/x-microsoft.net.object.binary.base64 is the format 
     that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
     
