--- a/source/Habanero.UI.Base/CollapsiblePanelResource.resx
+++ b/source/Habanero.UI.Base/CollapsiblePanelResource.resx
@@ -126,6 +126,13 @@
         JGHTiRsZjCduYDDsX89g0LeWQa93NYNu9yoGna6VDNpADHQHABV7NTO1Ss0oAAAAAElFTkSuQmCC
 </value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="nav_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\nav_icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nbItemBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\nbItemBullet.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pinoff_withcolour" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB0AAAAbCAMAAAC3FHQgAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -174,5 +181,8 @@
         HezsU/wLZn911rLSiByiZRc+b5zVbWRm+H4PsTacybVvXpc3ORvkiS9nhusHpaGW8AAAAABJRU5ErkJg
         gg==
 </value>
+  </data>
+  <data name="smBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\smBack.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
