--- a/source/Habanero.UI.Base/CollapsiblePanelResource.resx
+++ b/source/Habanero.UI.Base/CollapsiblePanelResource.resx
@@ -127,8 +127,14 @@
 </value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="headergradient_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\headergradient-blue.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="nav_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\nav_icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nav_icon_yellowarrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\nav_icon-yellowarrow.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="nbItemBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\nbItemBullet.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,5 +190,8 @@
   </data>
   <data name="smBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\smBack.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="smBack_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\smBack-white.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
