Worked on #734 (Virtualised (cached) grid loader) Refactoring code that is common from DataSetProvider to UIGridColumn.cs This is needed so that I can implement a grid loader that does not depend on DataSetProviders. This is required for the Paginated Provider required for Asset Management. Removed code in ClassDefHelper that was identical to the code in ClassDef.

--- a/source/Habanero.Bo/Loaders/Xsds.resx
+++ b/source/Habanero.Bo/Loaders/Xsds.resx
@@ -124,4 +124,7 @@
   <data name="ui" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>xsds\ui.xsd;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+	<data name="There_was_an_error_in_DataSetProvider_MultipleDelesHit">
+		<value><![CDATA[There was an error in DataSetProvider: If you hit delete many times in succession then you get an issue with the events interfering and you get a wierd error ]]></value>
+	</data>
 </root>
